...
    var fetchStatusLabelText: String = ""
    var cases: [CaseStatus] = []

    private lazy var layout: UICollectionViewCompositionalLayout = {
        var config = UICollectionLayoutListConfiguration(appearance: .plain)
        config.trailingSwipeActionsConfigurationProvider = { [unowned self] indexPath in
            let deleteAction = UIContextualAction(style: .destructive, title: "Delete", handler: { action, view, completion in
                self.handleDeleteAction(forIndexPath: indexPath)
            })
            return UISwipeActionsConfiguration(actions: [deleteAction])
        }
        config.showsSeparators = false
        config.backgroundColor = .systemBackground
...

    private func setupNavigationItems() {
        activityIndicator.translatesAutoresizingMaskIntoConstraints = false
        activityIndicator.heightAnchor.constraint(equalToConstant: 50).isActive = true
        activityIndicator.widthAnchor.constraint(equalToConstant: 50).isActive = true

        title = "My Cases"
        navigationController?.navigationBar.prefersLargeTitles = true
        navigationItem.setRightBarButtonItems([
            .init(barButtonSystemItem: .add, target: self, action: #selector(onAddButtonTapped)),
            .init(customView: activityIndicator)
        ], animated: true)
    }
...
