...
        dateAdded: PreviewDataRepository.case2.lastUpdated! - 8000000,
        lastUpdated: PreviewDataRepository.case2.lastUpdated! - 8000000,
        status: Status.caseWasReceived.rawValue
    )

    static let case2 = CaseStatus(
        receiptNumber: "MSC2119251333",
        status: Status.caseWasApproved.rawValue,
        body: "On January 23, 2022, we approved your Form I-765, Application for Employment Authorization, Receipt Number MSC2119251333. We sent you an approval notice. Please follow the instructions in the notice. If you do not receive your approval notice by March 3, 2022, please go to www.uscis.gov/e-request. If you move, go to www.uscis.gov/addresschange to give us your new mailing address.",
        formType: "I-765",
        lastUpdated: try! Date("2022-01-23T12:00:00+0000", strategy: .iso8601),
        lastFetched: Date()
    )
...
